--- a/template_gene.html
+++ b/template_gene.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<!-- Styles are defined for each object of the page-->
+<!-- Styles are defined for each object on the page-->
 <style>
 
 div.general {
@@ -55,7 +55,7 @@ h1 {
 
 table.gene_general, table.gene_GXA_table {
     border-collapse: collapse;
-    width: 600px;
+    width: 1200px;
 
     /* Setting fonts */
     color: black;
@@ -160,7 +160,7 @@ table.mouse_phenotype {
     margin-left: 30px;
     margin-bottom: 20px;
 
-    width: 650px;
+    width: 1000px;
     font-size: 12px;
 }
 div.mouse_gene {
