Skip indexes in html output

--- a/template_gene.html
+++ b/template_gene.html
@@ -53,9 +53,29 @@ h1 {
     font-weight: bold;
 }
 
+#go_data {
+border-collapse: collapse;
+table-layout: fixed;
+width: 100%;
+
+
+    /* Setting fonts */
+    color: black;
+    font-family: "Times New Roman", Times, serif;
+    font-size: 15px;
+
+    /* Setting up margins */
+/*
+    margin-top: 10px;
+    margin-left: 30px;
+    margin-bottom: 20px;
+*/
+
+}
+
 table.gene_general, table.gene_GXA_table {
     border-collapse: collapse;
-    width: 1200px;
+    width: 600px;
 
     /* Setting fonts */
     color: black;
@@ -70,7 +90,7 @@ table.gene_general, table.gene_GXA_table {
 
 div.big_box {
     background-color: white;
-    width: 700px;
+    width: 1200px;                       /* <-- changed */
     border: 1px solid navy;
     display: block;
 
