--- a/template_gene.html
+++ b/template_gene.html
@@ -57,6 +57,7 @@ h1 {
 border-collapse: collapse;
 table-layout: fixed;
 width: 100%;
+column-width=auto;
 
 
     /* Setting fonts */
@@ -211,7 +212,7 @@ function toggle() {
 
 <!-- Gene data. Table generated and inserted by Python script. -->
 <div id="General" class="big_box"><h1>Gene details</h1>
-<div id="Gene" class="general" >General information of the gene:<br>
+<div id="Gene" class="general" >General information:<br>
 
 {{ gene_table }}
 
