Fix gene info rendering

--- a/template_gene.html
+++ b/template_gene.html
@@ -53,13 +53,13 @@ h1 {
     font-weight: bold;
 }
 
+th{ text-align: left; }
+
 #common {
 border-collapse: collapse;
 table-layout: fixed;
 width: 100%;
 column-width=auto;
-
-
     /* Setting fonts */
     color: black;
     font-family: "Times New Roman", Times, serif;
